todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:
        - name: todo
          image: europe-north1-docker.pkg.dev/devopswithkubernetes-509407/dwk-repo/todo:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /ready
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 2
