todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo # This is the app as declared in the deployment.
  ports:
    - name: http
      protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 5001 # This is the target port
